fix music player

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <script src="https://kit.fontawesome.com/0edb635d7a.js" crossorigin="anonymous"></script>
-  <script src="./script.js" defer></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.2.4/howler.core.min.js" integrity="sha512-d00Brs/+XQUUaO0Y9Uo8Vw63o7kS6ZcLM2P++17kALrI8oihAfL4pl1jQObeRBgv06j7xG0GHOhudAW0BdrycA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script ype="module" src="script.js" defer></script>
 </head>
 
 <body>
   <main>
+    
     <div id="recordings">
       <div class="search-box">
         <div class="search-wrapper">
@@ -38,7 +40,8 @@
       </div>
       <button id="record-button">Start</button>
     </div>
+    
   </main>
+  
 </body>
-
 </html>
